RESOLVED FIXED194622
[LFC][BFC][MarginCollapse] Replaced boxes don't collapse through their margins
https://bugs.webkit.org/show_bug.cgi?id=194622
Summary [LFC][BFC][MarginCollapse] Replaced boxes don't collapse through their margins
alan
Reported 2019-02-13 16:09:57 PST
This is something I actually couldn't find in https://www.w3.org/TR/CSS22/box.html#collapsing-margins "A box's own margins collapse if the 'min-height' property is zero, and it has neither top or bottom borders nor top or bottom padding, and it has a 'height' of either 0 or 'auto', and it does not contain a line box, and all of its in-flow children's margins (if any) collapse."
Attachments
Patch (5.44 KB, patch)
2019-02-13 16:47 PST, alan
koivisto: review+
alan
Comment 1 2019-02-13 16:47:56 PST
Antti Koivisto
Comment 2 2019-02-14 07:33:25 PST
Comment on attachment 361964 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=361964&action=review > LayoutTests/fast/block/block-only/block-replaced-with-vertical-margins-expected.html:3 > + min-height: 0.1px; Seems little hackish.
alan
Comment 3 2019-02-14 08:44:47 PST
Radar WebKit Bug Importer
Comment 4 2019-02-14 08:49:40 PST
Note You need to log in before you can comment on or make changes to this bug.