Source/WebCore/layout/blockformatting/BlockMarginCollapse.cpp
@@ -392,6 +392,10 @@ bool BlockFormattingContext::MarginCollapse::marginsCollapseThrough(const Layout
     if (!layoutBox.style().minHeight().isAuto())
         return false;
 
+    // FIXME: Block replaced boxes clearly don't collapse through their margins, but I couldn't find it in the spec yet (and no, it's not a quirk).
+    if (layoutBox.isReplaced())
+        return false;
+
     if (!is<Container>(layoutBox))
         return true;
 
